--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8c7ae">  <td>18/10/09 15:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:com.test.Test1@eaafa6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:28</td>   <td>9578</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test2.setUp()[pri:0, instance:com.test.Test2@a3e297]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="a8c7ae">  <td>18/10/09 15:22:27</td>   <td>8901</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown()[pri:0, instance:com.test.Test1@eaafa6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:36</td>   <td>17131</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test2.tearDown()[pri:0, instance:com.test.Test2@a3e297]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="a8c7ae">  <td>18/10/09 15:22:23</td>   <td>4267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testPageTitleSample1()[pri:0, instance:com.test.Test1@eaafa6]">testPageTitleSample1</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:32</td>   <td>13002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testPageTitleSample2()[pri:0, instance:com.test.Test2@a3e297]">testPageTitleSample2</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:36</td>   <td>17124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleOne()[pri:0, instance:com.test.Test2@a3e297]">testSampleOne</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="a8c7ae">  <td>18/10/09 15:22:27</td>   <td>8895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSampleThree()[pri:0, instance:com.test.Test1@eaafa6]">testSampleThree</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:36</td>   <td>17126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleThree()[pri:0, instance:com.test.Test2@a3e297]">testSampleThree</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="a8c7ae">  <td>18/10/09 15:22:27</td>   <td>8897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSampleTwo()[pri:0, instance:com.test.Test1@eaafa6]">testSampleTwo</td> 
-  <td>main@5871537</td>   <td></td> </tr>
-<tr bgcolor="8f65a4">  <td>18/10/09 15:22:36</td>   <td>17129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleTwo()[pri:0, instance:com.test.Test2@a3e297]">testSampleTwo</td> 
-  <td>main@5871537</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/08 12:29:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test1.setUp()[pri:0, instance:com.test.Test1@1c27452]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:35</td>   <td>10765</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test2.setUp()[pri:0, instance:com.test.Test2@2b2c86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/08 12:29:34</td>   <td>10081</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test1.tearDown()[pri:0, instance:com.test.Test1@1c27452]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:45</td>   <td>20475</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Test2.tearDown()[pri:0, instance:com.test.Test2@2b2c86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/08 12:29:32</td>   <td>7848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testPageTitleSample1()[pri:0, instance:com.test.Test1@1c27452]">testPageTitleSample1</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:41</td>   <td>16410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testPageTitleSample2()[pri:0, instance:com.test.Test2@2b2c86]">testPageTitleSample2</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:45</td>   <td>20460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleOne()[pri:0, instance:com.test.Test2@2b2c86]">testSampleOne</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/08 12:29:34</td>   <td>10071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSampleThree()[pri:0, instance:com.test.Test1@1c27452]">testSampleThree</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:45</td>   <td>20464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleThree()[pri:0, instance:com.test.Test2@2b2c86]">testSampleThree</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="86dec2">  <td>19/03/08 12:29:34</td>   <td>10077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testSampleTwo()[pri:0, instance:com.test.Test1@1c27452]">testSampleTwo</td> 
+  <td>main@10499488</td>   <td></td> </tr>
+<tr bgcolor="656eb2">  <td>19/03/08 12:29:45</td>   <td>20467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.testSampleTwo()[pri:0, instance:com.test.Test2@2b2c86]">testSampleTwo</td> 
+  <td>main@10499488</td>   <td></td> </tr>
 </table>
